shop button alignment has been fixed

--- a/GoldenRiver-Laravel/public/css/shop copy.css
+++ b/GoldenRiver-Laravel/public/css/shop copy.css
@@ -70,7 +70,7 @@
 }
 
 .smallSpace {
-  height: 15px;
+  height: 19px;
   font-size: 1px;
 }
 
